--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
+    "apexcharts": "^3.18.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "react": "^17.0.0 || ^18.2.0",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6"
