--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
     "@mui/base": "^5.0.0-beta.31",
-    "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.4",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "apexcharts": "^3.18.1",
     "react": "^17.0.0 || ^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.8"
   },
