--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "apexcharts": "^3.18.1",
     "axios": "^1.6.7",
+    "cross-env": "^7.0.3",
     "react": "^17.0.0 || ^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
