--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/inter": "^5.0.16",
     "@mui/base": "^5.0.0-beta.31",
     "@mui/icons-material": "^5.15.6",
+    "@mui/joy": "^5.0.0-beta.25",
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "apexcharts": "^3.18.1",
