--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dropzone": "^14.2.3",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
