--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^17.0.0 || ^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
