--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ dist-ssr
 
 # Contentlayer
 .contentlayer
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
