--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "apexcharts": "^3.18.1",
     "axios": "^1.6.7",
-    "cross-env": "^7.0.3",
+    "express": "^4.18.2",
     "react": "^17.0.0 || ^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "cross-env": "^7.0.3",
     "daisyui": "^4.4.24",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
