--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
     "@mui/base": "^5.0.0-beta.31",
-    "@mui/icons-material": "^5.15.6",
-    "@mui/material": "^5.15.6",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "apexcharts": "^3.18.1",
     "axios": "^1.6.7",
     "cross-env": "^7.0.3",
+    "joi": "^17.12.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^17.0.0 || ^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.22.0",
+    "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.5",
+    "sweetalert2-react-content": "^5.0.7",
     "validator": "^13.11.0"
   },
   "devDependencies": {
