--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.22.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.5",
     "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^11.0.6",
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@klarr-agency/circum-icons-react": "^2.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
