--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icon": "^1.0.0",
+    "react-loading": "^2.0.3",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.22.0",
     "sort-by": "^1.2.0",
@@ -41,7 +43,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.24",
+    "daisyui": "^4.7.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
