--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.12.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^17.0.0 || ^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.0 || ^18.2.0",
